# brotli

./: README.md  sbom.cdx.json  setup.py
c/tools/: brotli.md
docs/: brotli.1
go/brotli/: BUILD.bazel  brotli_test.go  go.mod  synth_test.go
go/cbrotli/: BUILD.bazel  cbrotli_test.go  go.mod  reader.go  synth_test.go
java/org/brotli/: pom.xml
scripts/: download_testdata.sh  libbrotlicommon.pc.in  libbrotlidec.pc.in  libbrotlienc.pc.in
