load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # MIT

go_library(
    name = "cbrotli",
    srcs = [
        "reader.go",
        "writer.go",
    ],
    cdeps = [
        "@org_brotli//:brotlidec",
        "@org_brotli//:brotlienc",
    ],
    cgo = True,
    importpath = "github.com/victorvianna/brotli/go/cbrotli",
)